--- a/local.yml
+++ b/local.yml
@@ -8,3 +8,4 @@
     - include: tasks/node-setup.yml
     - include: tasks/npm-packages.yml
     - include: tasks/core.yml
+    - include: tasks/github-cli.yml
